cp/ 	PR c++/27787 	* decl.c (make_typename_type): Only try and resolve it when 	context is not dependent.  Refactor. 	* decl2.c (check_classfn): Push to class scope before looking for 	the function. testsuite/ 	PR c++/27787 	* g++.dg/template/typename10.C: New. 	* g++.dg/template/lookup4.C: Remove bogus error marker.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@116409 138bc75d-0d04-0410-961f-82ee72b054a4